[project]
name = "dev-track"
version = "0.1.0"
description = "A developer collaboration & task tracker"
authors = [
    {name = "Bhornpat", email = "thebowiiz2543@gmail.com"}
    {name = "Teeravist",email = "poomisi0841824189@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

    to do something

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
