[project]
name = "devtrack"
version = "0.1.0"
description = "A developer collaboration & task tracker"
authors = [
    {name = "Bhornpat", email = "thebowiiz2543@gmail.com"}
    # {name = "Teeravist",email = "poomisi0841824189@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.2,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "shell (>=1.0.1,<2.0.0)"
]
packages = [{ include = "devtrack", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
devtrack = "manage:main"
